[package]
name = "gpiozero-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_gpiozero = { git = "https://github.com/rahul-thakoor/rust_gpiozero.git", branch = "master" }
clap = { version = "4.3.8", features = ["derive", "string"] }
